<resources>
    <string name="app_name">Job</string>
    <string name="app_id">408956192824238</string>

    <string name="facebook_app_id">187928301792538</string>
    <string name="fb_login_protocol_scheme">fb138286920176161</string>

    <!--Sliding Menu-->
    <string name="profile_txt">Profile</string>
    <string name="post_new_job_txt">Post a new-job</string>
    <string name="search_conidates_txt">Search Candidates</string>
    <string name="notification_txt">Notification</string>
    <string name="about_us_txt">About Us</string>
    <string name="change_password_txt">Change Password</string>
    <string name="privacy_policy_txt">Help</string>
    <string name="payment_txt">Membership</string>
    <string name="terms_conditions_txt">Interview Tips</string>
    <string name="logout_txt">Logout</string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>
    <string name="cancel">Cancel</string>

    <string name="title_activity_initial_screen">CCAvenueMobileSeamless</string>
    <string name="title_activity_billing_shipping">BillingShippingActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="access_code">Access Code</string>

    <string name="pay_opt">Payment Option</string>
    <string name="card_type">Card Type</string>
    <string name="pay_button">Pay</string>
    <string name="next_button">Next</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="billingAddress">Billing Address</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="tel">Telephone</string>
    <string name="email">Email Id</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvv">Card CVV</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="card_details">Card Details</string>
    <string name="issuing_bank">Issuing Bank</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="customer_identifier">Customer Identifier</string>
    <string name="emi_banks">EMI Banks</string>
    <string name="emi_card_name">Card Name</string>

    <string name="privacy_policy"><u> Privacy Policy</u></string>
    <string name="terms_condition"><u>Terms &amp; Conditions</u></string>


</resources>
